--- a/server/pages/pixelboard.html
+++ b/server/pages/pixelboard.html
@@ -4,10 +4,15 @@
   <script src="./js/jquery-1.11.1.min.js" type='text/javascript'></script>
 
   <script type='text/javascript'>
-    $( document ).ready(function(){
+  $( document ).ready(function(){
+
+    $('.submitOnEnter').keypress(function(e){
+      if(e.keyCode==13)
+        $('#submitButton').click();
+    });
 
     /* Adding a handler to the submit event */
-    $("#form-submit").submit(function(event) {
+    $("#form-submit, #form-payload, #form-auth").submit(function(event) {
 
       /*Stop the usual form submission event*/
       event.preventDefault();
@@ -18,7 +23,7 @@
       var token = $("#token").val();
       var data = $("#data").val();
 
-      if ( data == 'shutdown' ) {
+      if ( data == 'shutdown' || data == 'halt') {
         var url='/shutdown';
       } else {
         var url = $form.attr( "action" );
@@ -48,8 +53,7 @@
       });
 
     });
-    });
-
+  });
   </script>
 
 <style type="text/css">
@@ -131,8 +135,8 @@
       <form id="form-auth" title="Authorization">
         <fieldset>
           <legend>Authorization</legend>
-          <p><label class="field" for="user">User</label><input class="textbox-300" type="text" id="user" name="user" /></p>
-          <p><label class="field" for="token">Token</label><input class="textbox-300" type="text" id="token" name="token" /></p>
+          <p><label class="field" for="user">User</label><input class="textbox-300 submitOnEnter" type="text" id="user" name="user" /></p>
+          <p><label class="field" for="token">Token</label><input class="textbox-300 submitOnEnter" type="text" id="token" name="token" /></p>
           <p></p>
         </fieldset>
       </form>
@@ -141,15 +145,16 @@
       <form id="form-payload" title="Payload">
         <fieldset>
           <legend>Payload</legend>
-          <p><label class="field" for="data">Data</label><input class="textbox-300" type="text" id="data" name="data" /></p>
+          <p><label class="field" for="data">Data</label><input class="textbox-300 submitOnEnter" type="text" id="data" name="data" /></p>
           <p></p>
+          <input type="text" style="display: none;" />
         </fieldset>
       </form>
     </div>
     <div class="content">
       <form id="form-submit" action="./" title="Ok" method="post">
         <div class="buttonHolder">
-        <p><input type="submit" id="submitButton" value="Send" /></p>
+          <p><input type="submit" id="submitButton" value="Send" /></p>
         </div>
       </form>
     </div>
